# fastApiBaseProject

./: .gitignore  README.md  main.py  pyproject.toml
app/: models.py  settings.py
app/handlers/: auth.py
app/middlewares/: logging.py
app/orm/: session_manager.py
app/schemas/: users.py
app/services/aaa/: exc.py  jwt.py  users.py
app/services/cache/: __init__.py  redis.py
