[tool.poetry]
name = "fastapibaseproject"
version = "0.1.0"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
loguru = "^0.7.2"
redis = "^5.0.8"
passlib = "^1.7.4"
pydantic-settings = "^2.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.2"
bcrypt = "^4.2.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
black = {extras = ["d"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
